Fix product page layout: constrain thumbnail list height and prevent parent vertical stretching

--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,11 @@
 }
 
 /* Hide scrollbars while keeping scroll functionality */
-.scrollbar-hide {
+.scrollbar-hide, .no-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-.scrollbar-hide::-webkit-scrollbar {
+.scrollbar-hide::-webkit-scrollbar, .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
